objects/Account.object
<CustomObject>
    <fields>
        <fullName>Annual_Budget__c</fullName>
        <label>Annual Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Committed__c</fullName>
        <label>Annual Committed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Establishment_Date__c</fullName>
        <description>This field should be entered by team members. This date is for when the business was first originally started.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Establishment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Length_Months__c</fullName>
        <label>Contract Length Months</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Length_Years__c</fullName>
        <label>Contract Length Years</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreditScore__c</fullName>
        <label>Credit Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNA_Person_Org_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter person or org number leading with P or O, respectively. For example, P12345 or O12345.</inlineHelpText>
        <label>DNA Person/Org Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Type__c</fullName>
        <label>Dealer Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Boat</fullName>
                </value>
                <value>
                    <fullName>Commercial Auto</fullName>
                </value>
                <value>
                    <fullName>Motorcycle</fullName>
                </value>
                <value>
                    <fullName>Power Sports</fullName>
                </value>
                <value>
                    <fullName>RV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DefaultBranch__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Default Branch</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>JointAccountIDs__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Joint Account IDs</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Expense__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Marketing Expense</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Member Number</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MembershipDate__c</fullName>
        <description>This is the date member was added to DNA</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Membership Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MergeIntoId__c</fullName>
        <description>Setting this field will cause an automatic merge of the accounts.  This field should be used by administrators only!</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Set to the 18 digit account Id that this record should be merged into.</inlineHelpText>
        <label>Merge Into Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Misc_Information__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Misc. Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Monthly_Sold__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Monthly Sold</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Number__c</fullName>
        <description>DNA org number for existing organizations</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter org number leading with O. For example, O12345</inlineHelpText>
        <label>Org Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OrganizationName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Organization Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationNumber__c</fullName>
        <description>DNA org number for existing organizations</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Organization Number</label>
        <length>22</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OrganizationTaxID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The Tax ID is the tax identification number for the organization.</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <externalId>true</externalId>
        <label>Organization Tax ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OrganizationType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Organization Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLNDR__Current_Deposit_Balance__c</fullName>
        <description>Total Current Deposit Balance for active accounts associated with this Account/Relationship in PrecisionLender</description>
        <label>Current Deposit Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Current_Loan_Balance__c</fullName>
        <description>Total Current Loan Balance for active accounts associated with this Account/Relationship in PrecisionLender</description>
        <label>Current Loan Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Current_Other_Income__c</fullName>
        <description>Total Pre-tax Income for Other Fee-Based Accounts associated with this Account/Relationship in PrecisionLender</description>
        <label>Current Other Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Average_Assets__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Average Assets</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Average Assets</inlineHelpText>
        <label>Average Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Average_Equity__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Average Equity</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Average Equity</inlineHelpText>
        <label>Average Equity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Average_Yield__c</fullName>
        <description>This is the average interest income divided by the average outstanding assets.</description>
        <formula>if( PLNDR__FS_Average_Assets__c &gt; 0, PLNDR__FS_Interest_Income__c / PLNDR__FS_Average_Assets__c , null )</formula>
        <inlineHelpText>This is the average interest income divided by the average outstanding assets.</inlineHelpText>
        <label>Average Yield</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Interest_Expense__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Interest Expense</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Interest Expense</inlineHelpText>
        <label>Interest Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Interest_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Interest Income</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Interest Income</inlineHelpText>
        <label>Interest Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Loan_Average_Balance__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Loan Average Balance</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Loan Average Balance</inlineHelpText>
        <label>Loan Average Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Loan_Commitment__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Loan Commitment</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Loan Commitment</inlineHelpText>
        <label>Loan Commitment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Loan_Gross_Funding__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Loan Gross Funding</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Loan Gross Funding</inlineHelpText>
        <label>Loan Gross Funding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Loan_Loss_Reserves__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Loan Loss Reserves</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Loan Loss Reserves</inlineHelpText>
        <label>Loan Loss Reserves</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Loan_Net_Funding__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Loan Net Funding</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Loan Net Funding</inlineHelpText>
        <label>Loan Net Funding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Net_Commitment__c</fullName>
        <description>Net Commitment for prospective accounts (Opportunities)</description>
        <inlineHelpText>Net Commitment for prospective accounts (Opportunities)</inlineHelpText>
        <label>Net Commitment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Net_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Net Income</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Net Income</inlineHelpText>
        <label>Net Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Net_Interest_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Net Interest Income</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Net Interest Income</inlineHelpText>
        <label>Net Interest Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Net_Interest_Margin__c</fullName>
        <description>This is the Net Interest Margin - the Net Interest Income divided by the Average Outstanding Assets.</description>
        <formula>IF( PLNDR__FS_Average_Assets__c &gt; 0, PLNDR__FS_Net_Interest_Income__c / PLNDR__FS_Average_Assets__c, null )</formula>
        <inlineHelpText>This is the Net Interest Margin - the Net Interest Income divided by the Average Outstanding Assets.</inlineHelpText>
        <label>Net Interest Margin</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Non_Interest_Expense__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Non Interest Expense</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Non Interest Expense</inlineHelpText>
        <label>Non Interest Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Other_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Other Income</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Other Income</inlineHelpText>
        <label>Other Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Pre_Tax_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Pre-Tax Income</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Pre-Tax Income</inlineHelpText>
        <label>Pre-Tax Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_ROA__c</fullName>
        <description>PrecisionLender Scenario Financial Statement ROA</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement ROA</inlineHelpText>
        <label>ROA</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_ROE__c</fullName>
        <description>PrecisionLender Scenario Financial Statement ROE</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement ROE</inlineHelpText>
        <label>ROE</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Target_ROE__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Target ROE</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Target ROE</inlineHelpText>
        <label>Target ROE</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Taxes__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Taxes</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Taxes</inlineHelpText>
        <label>Taxes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FTPFS_Average_Assets__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Average Assets</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Average Assets</inlineHelpText>
        <label>FTP Average Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FTPFS_Average_Equity__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Average Equity</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Average Equity</inlineHelpText>
        <label>FTP Average Equity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FTPFS_Average_Yield__c</fullName>
        <description>This is the average interest income divided by the average outstanding assets.</description>
        <formula>if( PLNDR__FTPFS_Average_Assets__c &gt; 0, PLNDR__FTPFS_Interest_Income__c / PLNDR__FTPFS_Average_Assets__c , null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the average interest income divided by the average outstanding assets.</inlineHelpText>
        <label>FTP Average Yield</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__FTPFS_Interest_Expense__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Interest Expense</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Interest Expense</inlineHelpText>
        <label>FTP Interest Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FTPFS_Interest_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Interest Income</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Interest Income</inlineHelpText>
        <label>FTP Interest Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FTPFS_Loan_Loss_Reserves__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Loan Loss Reserves</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Loan Loss Reserves</inlineHelpText>
        <label>FTP Loan Loss Reserves</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FTPFS_Net_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Net Income</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Net Income</inlineHelpText>
        <label>FTP Net Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FTPFS_Net_Interest_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Net Interest Income</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Net Interest Income</inlineHelpText>
        <label>FTP Net Interest Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FTPFS_Net_Interest_Margin__c</fullName>
        <description>This is the Net Interest Margin - the Net Interest Income divided by the Average Outstanding Assets.</description>
        <formula>IF( PLNDR__FTPFS_Average_Assets__c &gt; 0, PLNDR__FTPFS_Net_Interest_Income__c / PLNDR__FTPFS_Average_Assets__c, null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Net Interest Margin - the Net Interest Income divided by the Average Outstanding Assets.</inlineHelpText>
        <label>FTP Net Interest Margin</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__FTPFS_Non_Interest_Expense__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Non Interest Expense</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Non Interest Expense</inlineHelpText>
        <label>FTP Non Interest Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FTPFS_Other_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Other Income</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Other Income</inlineHelpText>
        <label>FTP Other Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FTPFS_Pre_Tax_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Pre-Tax Income</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Pre-Tax Income</inlineHelpText>
        <label>FTP Pre-Tax Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FTPFS_ROA__c</fullName>
        <description>PrecisionLender Scenario Financial Statement ROA</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement ROA</inlineHelpText>
        <label>FTP ROA</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__FTPFS_ROE__c</fullName>
        <description>PrecisionLender Scenario Financial Statement ROE</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement ROE</inlineHelpText>
        <label>FTP ROE</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__FTPFS_Target_ROE__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Target ROE</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Target ROE</inlineHelpText>
        <label>FTP Target ROE</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__FTPFS_Taxes__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Taxes</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Taxes</inlineHelpText>
        <label>FTP Taxes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FTP_Interest_Expense__c</fullName>
        <description>The total FTP Interest Expense calculated by PrecisionLender for the active accounts associated with this Account/Relationship</description>
        <label>FTP Interest Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FTP_Net_Income__c</fullName>
        <description>The total FTP Net Income calculated by PrecisionLender for the active accounts under this Account/Relatonship</description>
        <label>FTP Net Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Long_Id__c</fullName>
        <description>Temporary field for Eli to view the long id</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Long Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLNDR__Owner_Percentile_Text__c</fullName>
        <description>Text version of Owner Percentile</description>
        <formula>CASE( PLNDR__Owner_Percentile__c ,
0.1, &quot;Top 10%&quot;,
0.2, &quot;Top 20%&quot;,
0.3, &quot;Top 30%&quot;,
0.4, &quot;Top 40%&quot;,
0.5, &quot;Top 50%&quot;,
0.6, &quot;Bottom 50%&quot;,
0.7, &quot;Bottom 40%&quot;,
0.8, &quot;Bottom 30%&quot;,
0.9, &quot;Bottom 20%&quot;,
0.1, &quot;Bottom 10%&quot;,
0, &quot;None&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Text version of Owner Percentile</inlineHelpText>
        <label>Owner Percentile Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLNDR__Owner_Percentile__c</fullName>
        <description>Strategic Value rank of this Account/Relaitonship against all other Accounts/Relationships for the same lender in PrecisionLender</description>
        <label>Owner Percentile</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__PL_External_Identifier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>PL External Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLNDR__PL_Relationship__c</fullName>
        <description>The PrecisionLender Relationship that this Account/Relaiotnship is associated with</description>
        <encryptionScheme>None</encryptionScheme>
        <label>PrecisionLender Relationship</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLNDR__Percentile_Text__c</fullName>
        <description>Text version of percentile</description>
        <formula>CASE(PLNDR__Percentile__c ,
0.1, &quot;Top 10%&quot;,
0.2, &quot;Top 20%&quot;,
0.3, &quot;Top 30%&quot;,
0.4, &quot;Top 40%&quot;,
0.5, &quot;Top 50%&quot;,
0.6, &quot;Bottom 50%&quot;,
0.7, &quot;Bottom 40%&quot;,
0.8, &quot;Bottom 30%&quot;,
0.9, &quot;Bottom 20%&quot;,
0.1, &quot;Bottom 10%&quot;,
0, &quot;None&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Text version of percentile</inlineHelpText>
        <label>Percentile Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLNDR__Percentile__c</fullName>
        <description>Strategic Value rank of this Account/Relationship across all active Accounts/Relationships</description>
        <label>Percentile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__PrecisionLender_Last_Updated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PrecisionLender Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PLNDR__Regional_Percentile_Text__c</fullName>
        <description>Text version of Regional Percentile</description>
        <formula>CASE( PLNDR__Regional_Percentile__c ,
0.1, &quot;Top 10%&quot;,
0.2, &quot;Top 20%&quot;,
0.3, &quot;Top 30%&quot;,
0.4, &quot;Top 40%&quot;,
0.5, &quot;Top 50%&quot;,
0.6, &quot;Bottom 50%&quot;,
0.7, &quot;Bottom 40%&quot;,
0.8, &quot;Bottom 30%&quot;,
0.9, &quot;Bottom 20%&quot;,
0.1, &quot;Bottom 10%&quot;,
0, &quot;None&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Text version of Regional Percentile</inlineHelpText>
        <label>Regional Percentile Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLNDR__Regional_Percentile__c</fullName>
        <description>Strategic Value rank of the Account/Relationship against other Accounts/Relationships in the same Region in PrecisionLender</description>
        <label>Regional Percentile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PersonNumber__c</fullName>
        <description>justin added this to be able to upsert accounts before upserting contacts as we need to link them together</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Person Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Request__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Purpose of Request</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <description>Used for a secondary phone number. This does not sync with DNA.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <description>This is used as an AKA for the Dealer Relationship&apos;s team so they can add a searchable name they know the business as.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Street Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Amount__c</fullName>
        <label>Total Contract Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifiedIdentityPhone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VerifiedIdentityPhone</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Org_Number__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>PersonNumber__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.DNA</value>
        </filters>
        <filters>
            <field>OrganizationNumber__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Secondary_Owner__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>DNA</fullName>
        <active>true</active>
        <label>DNA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>